--- a/templates/blankDetail.html
+++ b/templates/blankDetail.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:title" content="My Personal Word List" />
   <meta property="og:description" content="A collection of my words" />
-  <meta property="og:image" content="{{url_for('static', filename='logo_red.png')}}" />
+  <meta property="og:image" content="{{url_for('static', filename='my_logo.png')}}" />
   <link rel="shortcut icon" href="{{url_for('static', filename='favicon.ico')}}" type="image/x-icon" />
   <link rel="icon" href="{{url_for('static', filename='favicon.ico')}}" type="image/x-icon" />
   <title>Personal Word List</title>
