--- a/static/styles.css
+++ b/static/styles.css
@@ -1,5 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+* {
+  font-family: "Inter", serif;
+}
+
+body {
+  background-color: #DFF2EB;
+}
+
 .wrap {
-  background-color: RGBA(232, 52, 78, 0.2);
+  background-color: #7AB2D3;
   min-height: 100vh;
   padding-bottom: 50px;
 }
@@ -8,8 +18,8 @@
   width: 100%;
   height: 200px;
 
-  background-color: white;
-  background-image: url('logo_red.png');
+  background-color: #DFF2EB;
+  background-image: url('my_logo.png');
 
   background-position: center;
   background-size: contain;
@@ -31,9 +41,9 @@
 
 /* Home Page Styling */
 .search-box {
-  width: 70%;
+  width: 80%;
   margin: 50px auto;
-  max-width: 700px;
+  max-width: 800px;
 }
 
 .table {
@@ -45,6 +55,7 @@
 
 .table th {
   border-top-style: none;
+  background-color: #B9E5E8;
 }
 
 td {
@@ -101,9 +112,18 @@ tr.highlight a {
   padding: 0;
 }
 
-.error ul li a:visited {
-  color: purple;
+.error ul li a {
+  color: #DFF2EB;
+  transition: all ease-in-out .12s;
 }
+
+.error ul li a:hover {
+  color: #4A628A;
+}
+
+/* .error ul li a:visited {
+  color: purple;
+} */
 
 /* Detail Page Syling */
 span.example {
