--- a/templates/detail.html
+++ b/templates/detail.html
@@ -79,7 +79,7 @@
   <!-- Footer -->
   <footer class="py-3 my-1">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <li class="nav-item"><a href="/detail" class="nav-link px-2 text-body-secondary">Detail</a>
+      <li class="nav-item"><a href="/" class="nav-link px-2 text-body-secondary">Home</a>
       </li>
     </ul>
     <p class="text-center text-body-secondary">© 2024 LIand</p>
